<resources>
    <string name="app_name">DigiLog</string>
    <string name="password">Password</string>
    <string name="username_mail">Username / Mail</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="admin_page">Admin Page</string>
    <string name="regester_user">Regester User</string>
    <string name="full_name">Full Name</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="department">Department</string>
    <string name="_1st_2nd_3rd_4th_year">1st / 2nd / 3rd / 4th Year</string>
    <string name="password_reg">Password</string>
    <string name="register_now">Register Now</string>
    <string name="library_building">Library Building</string>
    <string name="choose_building">Choose Building</string>
    <string name="library_building_choose">Library Building</string>
    <string name="achademic_building">Achademic Building</string>
    <string name="choose_the_room">Choose The Room</string>
    <string name="reading_room">Reading Room</string>
    <string name="digital_room">Digital Room</string>
    <string name="i_m_in">I\'m In</string>
    <string name="entry_time">Entry Time</string>
    <string name="choose_the_lab_room">Choose The Lab Room</string>
    <string name="room_no">Room No</string>
    <string name="laptop">Laptop</string>
    <string name="enrty_time">Enrty Time</string>
    <string name="pc_no">PC No</string>
    <string name="i_m_in_lab">I\'m In</string>
    <string name="pc">PC</string>
    <string name="you_have_succesfullly_hacked_your_way_in">You Have Succesfullly Hacked Your Way In</string>
    <string name="out_time">Out Time</string>
    <string name="i_m_out_now">i\'m Out Now</string>
    <string name="let_s_log_in">Let\'s Log In</string>
</resources>